--- a/scss/jqTable.scss
+++ b/scss/jqTable.scss
@@ -23,6 +23,9 @@ $theme-color: #20A0FF darken(#20A0FF, 6.5%) lighten(#20A0FF, 6.5%);
     table {
         width: 100%;
     }
+    tr{
+        background: #fff;
+    }
     td,
     th {
         height: 40px;
