--- a/scss/jqTable.scss
+++ b/scss/jqTable.scss
@@ -1,4 +1,4 @@
-@import "awesome/awesome";
+@import "iconfont";
 @import "message";
 $theme-color: #20A0FF darken(#20A0FF, 6.5%) lighten(#20A0FF, 6.5%);
 .c-table {
